# Index-1.9B

./: .gitignore  INDEX_MODEL_LICENSE  Index-1.9B-32K_Long_Context_Technical_Report.md  Index-1.9B-32K长上下文技术报告.md  README.md  README_en.md  README_zh.md  pyproject.toml  requirements.txt
demo/: cli_demo.py  cli_long_text_demo.py  openai_demo.py  simple_demo.py  web_demo.py
demo/data/: user_long_text.txt
evaluate/: .gitignore  README.md  local_task.yaml  run.sh  run_leval.sh  run_local_test.py  run_local_test.sh
evaluate/configs/datasets/ARC_c/: ARC_c_ppl.py  ARC_c_ppl_2ef631_test.py  ARC_c_ppl_a450bd.py  ARC_c_ppl_a450bd_dev.py
evaluate/configs/datasets/ARC_e/: ARC_e_ppl.py  ARC_e_ppl_2ef631_test.py  ARC_e_ppl_a450bd.py
evaluate/configs/datasets/gsm8k/: gsm8k_gen_self_d1401a.py
evaluate/configs/datasets/hellaswag/: hellaswag_ppl.py  hellaswag_ppl_68947b.py
evaluate/configs/datasets/humaneval/: humaneval_gen.py
evaluate/configs/datasets/leval/levalcoursera/: leval_coursera_gen_36a006.py
evaluate/configs/datasets/leval/levalfinancialqa/: leval_financialqa_gen_b03798.py
evaluate/configs/datasets/leval/levalgovreportsumm/: leval_gov_report_summ_gen_b03798.py
evaluate/configs/datasets/leval/levalgsm100/: leval_gsm100_gen_77dd94.py
evaluate/configs/datasets/leval/levallegalcontractqa/: leval_legalcontractqa_gen_68a2ac.py
evaluate/configs/datasets/mbpp/: mbpp_gen_1e1056.py
evaluate/opencompass/: Config.py  dataset_version.py
evaluate/opencompass/cli/: main.py
evaluate/opencompass/datasets/: hellaswag.py
evaluate/opencompass/models/: huggingface_above_v4_33.py
evaluate/opencompass/openicl/icl_inferencer/: icl_gen_inferencer.py
evaluate/opencompass/runners/: local.py
evaluate/opencompass/summarizers/: needlebench.py
evaluate/opencompass/tasks/: debug_openicl_infer.py  openicl_infer.py
evaluate/opencompass/utils/: run.py
evaluate/requirements/: runtime.txt
evaluate/tools/: prompt_viewer.py
finetune/: README.md  finetune.py  infer.py  train.sh
finetune/utils/: arguments.py  trainer.py
roleplay/: README.md  hf_based_demo.py  hf_based_demo_gguf.py  index_play.py  index_play_gguf.py  openai_demo.py  realtime_chat.py  realtime_chat_gguf.py  realtime_chat_ollama.py  requirements.txt
roleplay/character/: 三三.csv  三三.json  三三_rag.json  三三_测试问题.json
roleplay/config/: config.json
roleplay/prompt/: dataset_character.txt
roleplay/src/: __init__.py  get_dataset.py  logger.py  prompt_concat.py  retrieve_dialog.py  utils.py
tests/: __init__.py  conftest.py  test_setup_validation.py
(+34 files in other folders)
